# ai-auto-scaling-for-legacy-applications

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  main.py  main_minimal.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docker/: .dockerignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md
docs/images/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/server/: package-lock.json  package.json
frontend/server/src/: index.js
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: Dashboard.tsx
frontend/src/hooks/: useApi.ts  useAuth.tsx  useWebSocket.ts
frontend/src/pages/: Auth.tsx  Index.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts  dashboard.ts
frontend/src/utils/: mockData.ts
frontend/supabase/: config.toml
k8s/: configmap.yml  deployment.yml  ingress.yml  service.yml
scripts/: benchmark.py  generate_configs.py  setup_data.py  setup_environment.py  train_models.py
src/: __init__.py
src/api/: __init__.py  main.py  websocket.py
src/config/: logging_config.py  settings.py
src/services/: __init__.py  config_generator.py  monitoring_service.py  scaling_service.py
src/utils/: __init__.py  data_loader.py  metrics.py  validators.py
tests/: conftest.py
tests/fixtures/: sample_data.csv
tests/integration/: test_end_to_end.py  test_scaling_workflow.py
tests/unit/: test_api.py  test_primary_model.py  test_secondary_model.py  test_services.py
(+28 files in other folders)
